[tool.poetry]
name = "repl_nix_Microsoft-Rewards-bot-2"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.29.0"
selenium = "^4.9.0"
Flask = "^2.3.1"
func-timeout = "^4.3.5"
ipapi = "^1.0.4"
notifiers = "^1.3.3"
Random-Word = "^1.0.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
